--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
--e git+https://github.com/uw-it-aca/canvas-support-tools.git#egg=canvas_admin
+Django==1.7.11
+PyCrypto
+PyOpenSSL
+python-dateutil
+nameparser>=0.2.8
+-e git+https://github.com/uw-it-aca/uw-restclients#egg=RestClients
+-e git+https://github.com/uw-it-aca/django-supporttools#egg=django_supporttools
+-e git+https://github.com/uw-it-aca/django-userservice#egg=Django-UserService
+-e git+https://github.com/uw-it-aca/authz_group#egg=AuthZ-Group
+-e git+https://github.com/uw-it-aca/django-aws-message#egg=django_aws_message
