adds lxml to wheelhouse

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ nameparser>=0.2.8
 -e git+https://github.com/uw-it-aca/django-aws-message#egg=django_aws_message
 --find-links wheelhouse
 PyCrypto==2.6.1
+lxml==3.4.4
