--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ django-compressor<2.0
 django-appconf
 PyOpenSSL
 python-dateutil
+mysql-python
 nameparser>=0.2.8
 -e git+https://github.com/uw-it-aca/uw-restclients#egg=RestClients
 -e git+https://github.com/uw-it-aca/django-supporttools#egg=django_supporttools
