--- a/web.2.7.config
+++ b/web.2.7.config
@@ -1,13 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
+    <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="msca_provisioner.wsgi.application" />
     <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS"
          value="D:\home\site\wwwroot\env\Scripts\activate_this.py" />
     <add key="WSGI_HANDLER"
          value="ptvs_virtualenv_proxy.get_virtualenv_handler()" />
     <add key="PYTHONPATH" value="D:\home\site\wwwroot" />
-    <add key="DJANGO_SETTINGS_MODULE" value="msca_provisioner.settings" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
@@ -25,6 +24,10 @@
            resourceType="Unspecified"
            requireAccess="Script" />
     </handlers>
+    <staticContent>
+      <mimeMap fileExtension=".less" mimeType="text/less" />
+      <mimeMap fileExtension=".woff" mimeType="font/opentype" />
+    </staticContent>
     <rewrite>
       <rules>
         <rule name="Static Files" stopProcessing="true">
