adds event base, sql backend

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-appconf
 PyOpenSSL
 python-dateutil
 nameparser>=0.2.8
+django-pyodbc-azure
 -e git+https://github.com/uw-it-aca/django-userservice#egg=Django-UserService
 -e git+https://github.com/uw-it-aca/uw-restclients#egg=RestClients
 -e git+https://github.com/uw-it-aca/django-supporttools#egg=django_supporttools
