adds cffi requirement for azure deploy

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ python-dateutil
 nameparser>=0.2.8
 pyodbc
 enum34
+cffi
 django-pyodbc-azure
 -e git+https://github.com/uw-it-aca/django-userservice#egg=Django-UserService
 -e git+https://github.com/uw-it-aca/uw-restclients#egg=RestClients
